[gd_scene load_steps=9 format=3 uid="uid://pdn03j67xudh"]

[ext_resource type="Script" path="res://Script/plus_bubble.gd" id="1_fm48p"]
[ext_resource type="Texture2D" uid="uid://bwdk3dt1r5x3i" path="res://Art/spritesheet.png" id="1_smshf"]
[ext_resource type="AudioStream" uid="uid://dxp65mohje1ia" path="res://Audio/plusBubble.ogg" id="3_hheje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f2j36"]
size = Vector2(6, 6)

[sub_resource type="Animation" id="Animation_5fv8n"]
resource_name = "Collect"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_plusSound"
}, {
"args": [],
"method": &"self_destroy"
}]
}

[sub_resource type="Animation" id="Animation_arqu4"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_38iev"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_msbx0"]
_data = {
"Collect": SubResource("Animation_5fv8n"),
"Idle": SubResource("Animation_arqu4"),
"RESET": SubResource("Animation_38iev")
}

[node name="PlusBubble" type="Area2D" groups=["PlusBubble"]]
collision_layer = 8
script = ExtResource("1_fm48p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f2j36")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
texture = ExtResource("1_smshf")
region_enabled = true
region_rect = Rect2(88, 0, 8, 8)

[node name="Timer" type="Timer" parent="."]

[node name="ReturnPlus" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_msbx0")
}

[node name="plusSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hheje")
volume_db = -22.0

[connection signal="timeout" from="ReturnPlus" to="." method="_on_return_plus_timeout"]
